# numob_sdk

./: CMakeLists.txt  LICENSE  README.md
examples/: numob_sdk_example.cpp  numob_serial_cli.c  numob_serial_example.c
include/numob/: sdk.h  serial.h  serial_type.h
src/: sdk.cpp  serial.c
